--- a/web_server/handle.html
+++ b/web_server/handle.html
@@ -52,12 +52,16 @@
     <tr>    <th>Handle log</th>
             <td class="nopadding">
                 <table class="data">
-                    <tr><th>Time</th><th>Type</th><th>Data</th></tr>
+                    <tr><th>Time</th><th>Type</th><th>Event</th><th>Old state</th><th>State</th><th>Worker</th><th></th></tr>
                     {% for log_record in handle_log %}
                         <tr>
                             <td>{{log_record.T|as_dt_utc}}</td>
-                            <td class="{{log_record.Type}}">{{log_record.Type}}</td>
-                            <td style="text-align:left">{{ log_record.Data|format_log_data }}
+                            <td>{{log_record.Type}}</td>
+                            <td>{{log_record.Data["event"]|none_as_blank}}</td>
+                            <td class="{{log_record.Data['old_state']}}">{{log_record.Data["old_state"]|none_as_blank}}</td>
+                            <td class="{{log_record.Data['state']}}">{{log_record.Data["state"]|none_as_blank}}</td>
+                            <td>{{log_record.Data["worker"]|none_as_blank}}</td>
+                            <td style="text-align:left">{{ log_record._RestOfData|format_log_data }}</td>
                         </tr>
                     {% endfor %}
                 </table>
