--- a/web_server/base.html
+++ b/web_server/base.html
@@ -246,7 +246,11 @@
     }
 
     .found {
-        background-color: #CCC;        
+        background-color: #DED;        
+    }
+    
+    .not_found {
+        background-color: #AAA;        
     }
     
     .available {
@@ -277,11 +281,13 @@
     <script type="text/javascript">
         var StateColors = {
                 "initial":    "#EEE",
-                "found":      "#CCC", 
+                "found":      "#DED",
                 "available":  "#8F8",
                 "reserved":   "#AAF", 
                 "done":       "#4A4", 
-                "failed":     "#F44"
+                "failed":     "#F44",
+                "notfound":   "#AAA", 
+                "not found":   "#AAA", 
         };
     </script>
 
