--- a/web_server/projects.html
+++ b/web_server/projects.html
@@ -63,7 +63,7 @@
                 var o = document.getElementById("handle_state_count:" + project_id + ":" + state);
                 if( o != null )
                     o.innerHTML = "" + counts[state];
-                o.className = state;
+                o.className = state.replace(" ", "_");
             }
         }
     }
