Added file handle event frequency chart

--- a/web_server/base.html
+++ b/web_server/base.html
@@ -316,6 +316,7 @@
     	    <td><a class=button href="{{GLOBAL_AppRootPath}}/P/projects">Projects</a></td>
     	    <td><a class=button href="{{GLOBAL_AppRootPath}}/R/index">RSEs</a></td>
     	    <td><a class=button href="{{GLOBAL_AppRootPath}}/R/proximity_map">CPU/RSE proximity map</a></td>
+    	    <td><a class=button href="{{GLOBAL_AppRootPath}}/P/stats">Statistics</a></td>
             <td><span style="color:#AAA; padding-right: 10px"><i>All times in UTC:&nbsp;<span id="current_utc"></span></i></span></td>
             <td style="width:100%"></td>
     		<td>
