--- a/web_server/stats.html
+++ b/web_server/stats.html
@@ -80,7 +80,10 @@
                             legend: {   y:0.5   },
                             xaxis: {
                                 type: "Date/time",
-                                range: [date_0, date_1] 
+                                range: [date_0, date_1],
+                                title: {
+                                    text: "Date/time"
+                                }
                             },
                             yaxis: {
                                 title: {
