Added copy to clipboard

--- a/web_server/handle.html
+++ b/web_server/handle.html
@@ -58,7 +58,7 @@
     <tr>    <th>Handle log</th>
             <td class="nopadding">
                 <table class="data">
-                    <tr><th>Time</th><th>Event</th><th>Old state</th><th>State</th><th>Worker</th><</tr>
+                    <tr><th>Time</th><th>Event</th><th>Old state</th><th>State</th><th>Worker</th></tr>
                     {% for log_record in handle_log %}
                         <tr>
                             <td>{{log_record.T|as_dt_utc}}</td>
