--- a/web_server/project.html
+++ b/web_server/project.html
@@ -17,6 +17,14 @@
 <table class="form">
     <tr>    <th>Project ID</th>         <td>{{project.ID}}</td> </tr>
     <tr>    <th>User</th>               <td>{{project.Owner}}</td> </tr>
+    {% if project.users and project.users|length %}
+        <tr><th>Authorized users</th>   <td>{% for u in project.users %}{{u.Username}} {% endfor %}</td>
+        </tr>
+    {% endif %}
+    {% if project.roles and project.roles|length %}
+        <tr><th>Authorized roles</th>   <td>{% for r in project.roles %}{{r.Name}} {% endfor %}</td>
+        </tr>
+    {% endif %}
     <tr>    <th>Created</th>            <td>{{project.CreatedTimestamp|as_dt_utc}}</td> </tr>
     <tr>    <th>Worker timeout</th>     <td>{{project.WorkerTimeout|none_as_blank}}</td></tr>
     <tr>    <th>Idle timeout</th>       <td>{{project.IdleTimeout|none_as_blank}}</td></tr>
